@@ -23,13 +23,13 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.remote.http.Contents.asJson;
 import static org.openqa.selenium.remote.http.HttpMethod.POST;
 
-import com.google.common.collect.ImmutableMap;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -81,8 +81,7 @@ class SessionQueueGridWithTimeoutTest {
   private static Server<?> createServer(HttpHandler handler) {
     return new NettyServer(
         new BaseServerOptions(
-            new MapConfig(
-                ImmutableMap.of("server", ImmutableMap.of("port", PortProber.findFreePort())))),
+            new MapConfig(Map.of("server", Map.of("port", PortProber.findFreePort())))),
         handler);
   }
 
@@ -154,7 +153,7 @@ class SessionQueueGridWithTimeoutTest {
 
   @Test
   void shouldBeAbleToDeleteTimedOutSessions() throws Exception {
-    ImmutableMap<String, String> caps = ImmutableMap.of("browserName", "cheese");
+    Map<String, String> caps = Map.of("browserName", "cheese");
     ExecutorService fixedThreadPoolService = Executors.newFixedThreadPool(1);
     ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
 
@@ -186,10 +185,9 @@ class SessionQueueGridWithTimeoutTest {
     server.stop();
   }
 
-  private HttpResponse createSession(ImmutableMap<String, String> caps) {
+  private HttpResponse createSession(Map<String, String> caps) {
     HttpRequest request = new HttpRequest(POST, "/session");
-    request.setContent(
-        asJson(ImmutableMap.of("capabilities", ImmutableMap.of("alwaysMatch", caps))));
+    request.setContent(asJson(Map.of("capabilities", Map.of("alwaysMatch", caps))));
 
     try (HttpClient client = clientFactory.createClient(server.getUrl())) {
       return client.execute(request);
